feat(api): configure EF Core DbContext and ASP.NET Core Identity
- Registered DevBlogContext with SQL Server using connection string from configuration.
- Integrated Identity with AppUser and AppRole, including password, lockout, and user settings.
- Updated Program.cs service registrations to support controllers and API explorer.

--- a/src/DevBlog.Api/DevBlog.Api.csproj
+++ b/src/DevBlog.Api/DevBlog.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DevBlog.Core\DevBlog.Core.csproj" />
+    <ProjectReference Include="..\DevBlog.Infrastructure\DevBlog.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
