--- a/src/DevBlog.Api/appsettings.Development.json
+++ b/src/DevBlog.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=DevBlog;User Id=sa;Password=12345;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
