--- a/src/DevBlog.Api/appsettings.json
+++ b/src/DevBlog.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "[filled in for each different environtment]"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
